	* Stop translating gpointers to ints in the dbus API.  This removes
	  functions from the dbus API.  (The openSUSE Project) (#12507)
	* Fix D-Bus introspection calls that omit the interface parameter.  (Tom
	  Samstag) (#13073)
	* Fixed bugs in purple_str_to_time() that caused the most recent 'make
	  check' failures.  (Nader Morshed) (#13131)

	Pidgin:
	* Support using the Page Up and Page Down keys on the numeric keypad in
	  the conversation window.  (Ryan Flegel) (#13127)
	* Fix a few memory leaks. (Nader Morshed) (#13162)
	* Support rendering strikethrough when received as in-line CSS. (#13168)
	* Editable comboboxes are now more friendly to some GTK+ themes. (Hugo
	  Pereira Da Costa) (#13164).

	Plugins:
	* The Voice/Video Settings plugin no longer resets selected devices to
	  defaults. (Jakub Adam) (#13044)
	* The Voice/Video Settings plugin no longer crashes when a stored device
	  name is not found in the list of available devices. (Jakub Adam)
	  (#13238)
	* The Autoaccept plugin now allows disabling filename escaping. (Rok
	  Mandeljc) (half of #11459)
	* The Autoaccept plugin now allows choosing Reject/Ask/Accept for
	  non-buddies. (Rok Mandeljc) (half of #11459)

	QQ:
	* QQ2008 is now the default protocol version. (Michael Terry) (#11635)

	XMPP:
	* Don't crash when receiving an unexpected/invalid jingle transport type.
	  (Nikita Kozlov) (#13136)
	* Handle Connection: Close headers for BOSH, when the server does not
	  terminate the connection itself. (#13008)
	* Improved parsing for DIGEST-MD5, which should resolve issues
	  connecting to some jabberd2 servers.  This corrects an issue parsing
	  one-character or empty elements. (Noa Resare) (#a14514)

	Yahoo!/Yahoo! JAPAN:
	* Fix a crash when an account disconnects before a p2p session is
	  completely set up. (Jan Kaluza) (#12432)

version 2.7.9 (12/26/2010):
	MSN:
	* Fix CVE-2010-4528, a crash when receiving short packets related to
	  P2Pv2 messages.

version 2.7.8 (12/19/2010):
	General: